<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".front.CreateAccount">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_senha"
        android:textColor="#000000"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@id/btnAvancar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="#454545"
        android:textSize="14sp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/btnAvancar"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="#DA0000"
        android:text="@string/avancar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />


</androidx.constraintlayout.widget.ConstraintLayout>