<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Fragment.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realizar_login"
        android:textColor="#000000"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:textColor="#000000"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/senha_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/senha_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/senha_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/senha_edit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text="@string/password"
        android:textColor="#454545"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="#DA0000"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />




</androidx.constraintlayout.widget.ConstraintLayout>